--- a/index.html
+++ b/index.html
@@ -9,13 +9,28 @@
 </head>
 <body>
     <header>
-
+        <img src="images/Vector.png" alt="logo">
+        <nav>
+            <a >comunidade</a>
+            <a >comunidade</a>
+            <a >comunidade</a>
+            <a >comunidade</a>
+        </nav>
     </header>
     <main>
+<section>   
+<div>
+    <h1>netshark Informatica</h1>
+    <h2>deixe a comunidade segura</h2>
+    <img src="" alt="">
+</div>
+</section>
+<section>
 
+</section>
     </main>
     <footer>
-        
+
     </footer>
 </body>
 </html>
