--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Netshark Informatica">
+    <link rel="stylesheet" href="style.css">
     <title>landing page em html/css</title>
 </head>
 <body>
@@ -22,15 +23,26 @@
 <div>
     <h1>netshark Informatica</h1>
     <h2>deixe a comunidade segura</h2>
-    <img src="" alt="">
+    <button >me adicione</button>
+    <img src="images/Group 4.svg" alt="">
+
 </div>
 </section>
+<h3>Nulla porttitor accumsan tincidunt.</h3>
+<p>
+    Donec rutrum congue leo eget malesuada. Curabitur arcu erat, accumsan id imperdiet et, 
+    porttitor at sem. Cras ultricies ligula sed magna dictum porta. Curabitur arcu erat, 
+    accumsan id imperdiet et, porttitor at sem. Vestibulum ante ipsum primis in faucibus o
+    rci luctus et ultrices posuere cubilia Curae; Donec velit neque, auctor sit amet aliquam vel,
+     ullamcorper sit amet ligula. Lorem ipsum dolor sit amet, consectetur 
+    adipiscing elit. Praesent sapien massa, convallis a pellentesque nec, egestas non nisi.
+</p>
 <section>
 
 </section>
     </main>
     <footer>
-
+<img src="images/pexels-magda-ehlers-1337386.jpg" alt="">
     </footer>
 </body>
 </html>
